Fixed disclaimer not showing up in certain pages
-Added flex-shrink-0 to disclaimer

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -823,6 +823,10 @@ video {
   height: 0.5rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -845,6 +849,11 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .max-h-\[37\.5rem\] {
@@ -958,6 +967,10 @@ video {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .basis-1\/2 {
